[gd_scene load_steps=6 format=3 uid="uid://dx8bf3sg52wqi"]

[ext_resource type="Script" path="res://main_menu/options_tab_container.gd" id="1_ebxan"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_svled"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xn5o"]
bg_color = Color(0.621524, 0.621524, 0.621524, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubcl5"]
bg_color = Color(0.621524, 0.621524, 0.621524, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhamk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="OptionsTabContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ebxan")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 50.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
tab_alignment = 1
current_tab = 1

[node name="Sound" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Volume" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Volume"

[node name="HSlider" type="HSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/Volume"]
layout_mode = 0
offset_left = 52.0
offset_top = 1.0
offset_right = 276.0
offset_bottom = 17.0

[node name="Mute" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Mute
"

[node name="CheckBox" type="CheckBox" parent="TabContainer/Sound/MarginContainer/VBoxContainer/Mute"]
layout_mode = 0
offset_left = 31.0
offset_top = -4.0
offset_right = 55.0
offset_bottom = 20.0

[node name="Resolution" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Resolution"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Resolution/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="1280x720 Resolution Button" type="Button" parent="TabContainer/Resolution/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_svled")
theme_override_styles/hover = SubResource("StyleBoxFlat_2xn5o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ubcl5")
theme_override_styles/normal = SubResource("StyleBoxFlat_jhamk")
text = "1280 x 720"

[node name="1920x1080 Resolution Button2" type="Button" parent="TabContainer/Resolution/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_svled")
theme_override_styles/hover = SubResource("StyleBoxFlat_2xn5o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ubcl5")
theme_override_styles/normal = SubResource("StyleBoxFlat_jhamk")
text = "1920 x 1080"

[connection signal="value_changed" from="TabContainer/Sound/MarginContainer/VBoxContainer/Volume/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="TabContainer/Sound/MarginContainer/VBoxContainer/Mute/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="TabContainer/Resolution/MarginContainer/VBoxContainer/1280x720 Resolution Button" to="." method="_on_1280_x_720_resolution_button_pressed"]
[connection signal="pressed" from="TabContainer/Resolution/MarginContainer/VBoxContainer/1920x1080 Resolution Button2" to="." method="_on_1920_x_1080_resolution_button_2_pressed"]
